# prismatica

./: .dockerignore  .gitignore  LICENSE  README.md  dockerfile  main.py  pyproject.toml
static/css/: styles.css
static/js/: script.js
templates/: index.html  view_image.html
