[tool.poetry]
name = "prismatica"
version = "0.1.0"
description = "A FastAPI project with HTMX to explore and view HDR images in AVIF format"
authors = ["Mehran Moghtadai <mehran@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
